--- a/index.html
+++ b/index.html
@@ -699,9 +699,22 @@
 					<div class="unit size1of4">
 						<span class="icon panjiva-icon-qzone"></span> panjiva-icon-qzone
 					</div>
-
 					<div class="unit size1of4">
 						<span class="icon panjiva-icon-bell"></span> panjiva-icon-bell
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-up-arrow"></span> panjiva-icon-up-arrow
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-down-arrow"></span> panjiva-icon-down-arrow
+					</div>
+				</div>
+				<div class="line">
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-left-arrow"></span> panjiva-icon-left-arrow
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-right-arrow"></span> panjiva-icon-right-arrow
 					</div>
 				</div>
 				<h3>Icon block</h3>
