update sidenav and more icon

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 		</nav>
 		<ul id="sideNav">
 				<a href="#top"><li class="">Top</li></a>
-				<li><a href="#grid">Grid</a></li>
-				<li><a href="#typography">Typography</a></li>
-				<li><a href="#color">Color</a></li>
-				<li><a href="#forms">Forms</a></li>
-				<li><a href="#navigation">Navigation</a></li>
-				<li><a href="#table">Table</a></li>
-				<li><a href="#icons">Icons</a></li>
+				<a href="#grid"><li>Grid</li></a>
+				<a href="#typography"><li>Typography</li></a>
+				<a href="#color"><li>Color</li></a>
+				<a href="#forms"><li>Forms</li></a>
+				<a href="#navigation"><li>Navigation</li></a>
+				<a href="#table"><li>Table</li></a>
+				<a href="#icons"><li>Icons</li></a>
 		</ul>
 
 		<div id="content">
@@ -715,6 +715,9 @@
 					</div>
 					<div class="unit size1of4">
 						<span class="icon panjiva-icon-right-arrow"></span> panjiva-icon-right-arrow
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-more"></span> panjiva-icon-more
 					</div>
 				</div>
 				<h3>Icon block</h3>
