--- a/settings.html
+++ b/settings.html
@@ -21,14 +21,15 @@
 			</ul>
 		</nav>
 		<ul id="sideNav">
-				<li class=""><a href="#top"><span class="panjiva-icon-home icon"></span>Dashboard</a></li>
-				<li><a href=""><span class="panjiva-icon-star icon"></span>Favorites</a></li>
-				<li><a href=""><span class="panjiva-icon-folder icon"></span>Group</a></li>
-				<li><a href=""><span class="panjiva-icon-mail icon"></span>Inbox</a></li>
-				<li><a href=""><span class="panjiva-icon-download icon"></span>Exports</a></li>
-				<li><a href=""><span class="panjiva-icon-graph icon"></span>Trends</a></li>
-				<li><a href=""><span class="panjiva-icon-help icon"></span>Help</a></li>
-				<li><a href="">More</a></li>
+				<a href="#top"><li class=""><span class="panjiva-icon-home icon"></span>Dashboard</li></a>
+				<a href=""><li><span class="panjiva-icon-star icon"></span>Favorites</li></a>
+				<a href=""><li><span claßss="panjiva-icon-folder icon"></span>Group</li></a>
+				<a href=""><li><span class="panjiva-icon-mail icon"></span>Inbox</li></a>
+				<a href=""><li><span class="panjiva-icon-download icon"></span>Exports</li></a>
+				<a href=""><li><span class="panjiva-icon-graph icon"></span>Trends</li></a>
+				<a href=""><li><span class="panjiva-icon-help icon"></span>Help</li></a>
+				<a href=""><li><span class="icon panjiva-icon-more"></span>More</li></a>
+				<a href=""><li><span class="icon panjiva-icon-left-arrow"></span></li></a>
 		</ul>
 
 		<div id="content">
