--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,7 @@
 		<ul id="sideNav">
 				<a href="#top"><li class=""><span class="panjiva-icon-home icon"></span>Dashboard</li></a>
 				<a href=""><li><span class="panjiva-icon-star icon"></span>Favorites</li></a>
-				<a href=""><li><span claßss="panjiva-icon-folder icon"></span>Group</li></a>
+				<a href=""><li><span class="panjiva-icon-folder icon"></span>Group</li></a>
 				<a href=""><li><span class="panjiva-icon-mail icon"></span>Inbox</li></a>
 				<a href=""><li><span class="panjiva-icon-download icon"></span>Exports</li></a>
 				<a href=""><li><span class="panjiva-icon-graph icon"></span>Trends</li></a>
