header img clippable

--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
 				<a name="navigation"></a>
 				<h2>Navigation</h2>
 				<ul class="localNav">
-				<li class="active"><a href="">Account</a></li>
-				<li><a href="">Profile</a></li>
-				<li><a href="">Order History</a></li>
+				<li class="active"><a href="">Active link</a></li>
+				<li><a href="">Link</a></li>
+				<li><a href="">Link</a></li>
 			</ul>
 			<pre>
 				&lt;ul class="localNav"&gt;<br />
