font update with triangles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="wrap">
-		<nav id="mainNav" class="line">
+		<div id="mainNav">
 			<a class="logo img" href=""><img src="img/panjivalogovectorized-white.png" alt="panjiva logo"></a>
 			<span class="search">
 				<input type="text" placeholder="Enter a company or product">
@@ -19,7 +19,7 @@
 				<li><a href="">English<span class="panjiva-icon-down icon"></span></a></li>
 				<li><a href="">Sally Sullivan<span class="panjiva-icon-down icon"></span></a></li>
 			</ul>
-		</nav>
+		</div>
 		<ul id="sideNav">
 				<a href="#top"><li class="">Top</li></a>
 				<a href="#grid"><li>Grid</li></a>
@@ -717,9 +717,24 @@
 						<span class="icon panjiva-icon-right-arrow"></span> panjiva-icon-right-arrow
 					</div>
 					<div class="unit size1of4">
+						<span class="icon panjiva-icon-up-triangle"></span> panjiva-icon-up-triangle
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-down-triangle"></span> panjiva-icon-down-triangle
+					</div>
+				</div>
+				<div class="line">
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-left-triangle"></span> panjiva-icon-left-triangle
+					</div>
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-right-triangle"></span> panjiva-icon-right-triangle
+					</div>
+					<div class="unit size1of4">
 						<span class="icon panjiva-icon-more"></span> panjiva-icon-more
 					</div>
 				</div>
+
 				<h3>Icon block</h3>
 				<span class="panjiva-icon-user iconBlock disabled"></span>
 				<p>panjiva-icon-user iconBlock disabled</p>
