--- a/settings.html
+++ b/settings.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="wrap">
-		<nav id="mainNav" class="">
+		<div id="mainNav" class="">
 			<a class="logo img" href=""><img src="img/panjivalogovectorized-white.png" alt="panjiva logo"></a>
 			<span class="search">
 				<input type="text" placeholder="Enter a company or product">
@@ -19,7 +19,7 @@
 				<li><a href="">English<span class="panjiva-icon-down icon"></span></a></li>
 				<li><a href="">Sally Sullivan<span class="panjiva-icon-down icon"></span></a></li>
 			</ul>
-		</nav>
+		</div>
 		<ul id="sideNav">
 				<a href="#top"><li class=""><span class="panjiva-icon-home icon"></span>Dashboard</li></a>
 				<a href=""><li><span class="panjiva-icon-star icon"></span>Favorites</li></a>
@@ -29,7 +29,7 @@
 				<a href=""><li><span class="panjiva-icon-graph icon"></span>Trends</li></a>
 				<a href=""><li><span class="panjiva-icon-help icon"></span>Help</li></a>
 				<a href=""><li><span class="icon panjiva-icon-more"></span>More</li></a>
-				<a href=""><li><span class="icon panjiva-icon-left-arrow"></span></li></a>
+				<a href=""><li><span class="icon panjiva-icon-left-arrow"></span>Hide</li></a>
 		</ul>
 
 		<div id="content">
